# gameprogcpp

./: .gitignore  README.md
Chapter01/: CMakeLists.txt  Game.cpp  Game.h  main.cpp
Chapter01/Chapter01-mac.xcodeproj/: project.pbxproj
Chapter01/Chapter01-mac.xcodeproj/project.xcworkspace/xcuserdata/leh.xcuserdatad/: UserInterfaceState.xcuserstate
Chapter01/Chapter01-mac.xcodeproj/xcshareddata/xcschemes/: Game-mac.xcscheme
Chapter02/: Actor.cpp  Actor.h  AnimSpriteComponent.cpp  AnimSpriteComponent.h  BGSpriteComponent.cpp  BGSpriteComponent.h  CMakeLists.txt  Game.cpp  Game.h  Ship.cpp  Ship.h  main.cpp
Chapter02/Chapter02-mac.xcodeproj/: project.pbxproj
Chapter02/Chapter02-mac.xcodeproj/project.xcworkspace/xcuserdata/leh.xcuserdatad/: UserInterfaceState.xcuserstate
Chapter02/Chapter02-mac.xcodeproj/xcshareddata/xcschemes/: Game-mac.xcscheme
Chapter03/: Actor.cpp  Actor.h  Asteroid.cpp  Asteroid.h  Component.cpp  Component.h  Game.cpp  MoveComponent.h  Ship.cpp  Ship.h  SpriteComponent.cpp
Chapter03/Chapter03-mac.xcodeproj/: project.pbxproj
Chapter04/: AIComponent.cpp  AIComponent.h  AIState.cpp  AIState.h  Bullet.cpp  Bullet.h  CircleComponent.h  Component.h  Enemy.cpp  Enemy.h  Game.cpp  Game.h  Grid.cpp  Grid.h  InputComponent.cpp  NavComponent.cpp  NavComponent.h  Search.cpp  SpriteComponent.h  Tile.cpp  Tile.h  Tower.cpp  Tower.h
Chapter04/Chapter04-mac.xcodeproj/: project.pbxproj
Chapter05/: Actor.cpp  Actor.h  Asteroid.cpp  Component.h  Game.cpp  Game.h  MoveComponent.cpp  Shader.cpp  Shader.h  SpriteComponent.h
Chapter05/Chapter05-mac.xcodeproj/: project.pbxproj
Chapter05_Veldrid/: Actor.cs  ActorState.cs  Asteroid.cs  ButtonState.cs  Chapter05.cap  Chapter05.csproj  Chapter05.sln  CircleComponent.cs  Component.cs  Game.cs  InputComponent.cs  InputState.cs  InputSystem.cs  KeyboardState.cs  Laser.cs  MathUtils.cs  MoveComponent.cs  ProcessedShader.cs  ProcessedTexture.cs  Program.cs  Random.cs  Renderer.cs  Ship.cs  SpriteComponent.cs  Vertex.cs  VertexArray.cs
Chapter05_Veldrid/Shaders/: Sprite.vert
Chapter06/: Actor.cpp  Actor.h  CameraActor.cpp  CircleComponent.cpp  CircleComponent.h  Game.cpp  Game.h  MeshComponent.cpp  MoveComponent.cpp  PlaneActor.cpp  Renderer.cpp  Shader.cpp  SpriteComponent.cpp  VertexArray.cpp  VertexArray.h
Chapter06/Chapter06-mac.xcodeproj/: project.pbxproj
Chapter06/Shaders/: Basic.frag  Pong.frag  Transform.vert
Chapter06_Veldrid/: Actor.cs  ActorState.cs  Asteroid.cs  ButtonState.cs  Chapter05cpp.cap  Chapter06.csproj  Chapter06.sln  CircleComponent.cs  Component.cs  Game.cs  InputComponent.cs  InputState.cs  InputSystem.cs  KeyboardState.cs  Laser.cs  MathUtils.cs  Mesh.cs  MeshComponent.cs  MeshShader.cs  MoveComponent.cs  PlaneActor.cs  ProcessedShader.cs  ProcessedTexture.cs  Program.cs  Random.cs  Renderer.cs  Ship.cs  SpriteComponent.cs  SpriteShader.cs  Vertex.cs  VertexArray.cs  original.rdc
Chapter06_Veldrid/Shaders/: Sprite.frag
Chapter07/: AudioSystem.cpp  AudioSystem.h  CameraActor.cpp  CameraActor.h  CircleComponent.h  Game.cpp  Game.h  InputComponent.h  Mesh.cpp  Renderer.h  SoundEvent.cpp  SoundEvent.h  Texture.h
Chapter07/Chapter07-mac.xcodeproj/: project.pbxproj
Chapter08/: Actor.cpp  Actor.h  CircleComponent.cpp  Component.h  Game.cpp  Game.h  InputComponent.cpp  InputComponent.h  InputSystem.cpp  InputSystem.h  Laser.cpp  Laser.h  Math.h  MoveComponent.cpp  Random.h  Shader.cpp  Ship.cpp  Ship.h  SpriteComponent.cpp  VertexArray.cpp
Chapter08/Chapter08-mac.xcodeproj/: project.pbxproj
Chapter08/Shaders/: Basic.vert
Chapter09/: AudioSystem.h  CameraActor.cpp  CameraComponent.cpp  FPSActor.cpp  FPSCamera.cpp  FPSCamera.h  FollowActor.cpp  FollowCamera.h  Game.cpp  Game.h  Math.cpp  MeshComponent.h  MoveComponent.cpp  MoveComponent.h  OrbitActor.cpp  OrbitActor.h  OrbitCamera.cpp  OrbitCamera.h  Renderer.cpp  SplineActor.h  SplineCamera.cpp  SpriteComponent.cpp  SpriteComponent.h  VertexArray.cpp
Chapter09/Chapter09-mac.xcodeproj/: project.pbxproj
Chapter09/Shaders/: Pong.vert
Chapter10/: Actor.cpp  Actor.h  AudioComponent.cpp  AudioComponent.h  BallActor.cpp  BallMove.cpp  BallMove.h  BoxComponent.h  CameraComponent.h  Collision.cpp  Collision.h  FPSActor.cpp  FPSActor.h  FPSCamera.cpp  FollowCamera.cpp  Game.cpp  Game.h  Mesh.cpp  Mesh.h  MeshComponent.cpp  MoveComponent.cpp  MoveComponent.h  PhysWorld.cpp  PlaneActor.cpp  PlaneActor.h  Renderer.h  SplineActor.cpp  SplineCamera.cpp  SplineCamera.h  SpriteComponent.h
Chapter10/Chapter10-mac.xcodeproj/: project.pbxproj
Chapter11/: AudioSystem.cpp  BallActor.h  Font.cpp  Font.h  Game.cpp  Game.h  HUD.cpp  HUD.h  Mesh.h  MoveComponent.cpp  PauseMenu.cpp  PauseMenu.h  PlaneActor.h  Renderer.cpp  Shader.h  SoundEvent.cpp  TargetActor.cpp  TargetComponent.cpp  Texture.cpp  UIScreen.cpp  UIScreen.h
Chapter11/Chapter11-mac.xcodeproj/: project.pbxproj
Chapter11/Shaders/: BasicMesh.vert
Chapter12/: .clang-format  Animation.cpp  Animation.h  BoneTransform.cpp  BoneTransform.h  BoxComponent.cpp  Collision.cpp  Component.cpp  Component.h  DialogBox.cpp  DialogBox.h  FollowActor.cpp  FollowActor.h  Font.h  Game.cpp  Game.h  HUD.cpp  MatrixPalette.h  Mesh.cpp  MeshComponent.cpp  MeshComponent.h  PhysWorld.h  Random.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  SkeletalMeshComponent.cpp  SkeletalMeshComponent.h  Skeleton.cpp  Skeleton.h  SoundEvent.h  SpriteComponent.cpp  TargetActor.h  TargetComponent.h  Texture.h  UIScreen.cpp  VertexArray.cpp  VertexArray.h
Chapter12/Chapter12-mac.xcodeproj/: project.pbxproj
Chapter12/Shaders/: Skinned.vert
(+15 files in other folders)
